CON-2681 add support for anonymous objects and allof's (#1)
* add support for anonymous objects
