# example/generated/model_denis_all_of.go
@@ -1,0 +1,9 @@
+// This file is auto-generated, DO NOT EDIT.
+//
+// Source:
+//     Title: Test Service
+//     Version: 0.1.0
+package api
+
+// DenisAllOf is an object.
+type DenisAllOf map[string]interface{}
